Hopefully fixed scroll bug on mobile

--- a/src/components/ActivityModal.css
+++ b/src/components/ActivityModal.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  height: 100dvh;
   background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
